--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
                 </div>
                 <div class="col-md-4" data-aos="fade-up" data-aos-delay="100">
                     <div class="card bg-card-purple">
-                        <img src="https://pic.bstarstatic.com/ugc/302c52b931c500526df763eb498a0e7e.jpg" alt="Project 2" class="card-img-top">
+                        <img src="https://i.ytimg.com/vi/gU5MzgPsHPw/maxresdefault.jpg" alt="Project 2" class="card-img-top">
                         <div class="card-body">
                             <h5 class="card-title text-white">Nge Solo PDS 4</h5>
                             <p class="card-text text-white-opa">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corrupti dolorum, optio ad consequatur iure culpa aliquid, delectus repellat quis, adipisci eveniet doloremque quidem unde laboriosam? Dolores unde animi.</p>
