--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                     <p class="hero-text mb-0">Ananda Cahya<span class="text-purple"> Ramadan</span></p>
                     <p class="text-sub fw-bold text-white" id="typed-text"></p>
                     <p class="text-white-opa">
-                        Saya adalah seorang Full Stack Developer yang baru lulus (fresh graduate) dengan semangat untuk terus belajar dan berkembang di dunia pengembangan web. Familiar dengan teknologi seperti Laravel, PHP, JavaScript, HTML, dan CSS, saya memiliki kemampuan untuk menangani pengembangan aplikasi web dari sisi front-end maupun back-end. 
+                        Saya adalah seorang Full Stack Developer dengan semangat untuk terus belajar dan berkembang di dunia pengembangan web. Familiar dengan teknologi seperti Laravel, PHP, JavaScript, HTML, dan CSS, saya memiliki kemampuan untuk menangani pengembangan aplikasi web dari sisi front-end maupun back-end. 
                     </p>
                     <p class="social-media">
                         <i class="bi bi-instagram me-3"></i>
@@ -74,10 +74,10 @@
             </div>
             <div class="row g-4 portofolio-items">
                 <div class="col-md-4" data-aos="fade-up" data-aos-delay="100">
-                    <div class="card bg-card-red">
-                        <img src="https://awsimages.detik.net.id/community/media/visual/2019/04/24/8d35c203-74e7-4b86-947f-0b0a58a1c85d_169.jpeg?w=1200" alt="Project 1" class="card-img-top">
+                    <div class="card bg-card-primary">
+                        <img src="https://c4.wallpaperflare.com/wallpaper/174/602/476/4k-boruto-black-wallpaper-preview.jpg" alt="Project 1" class="card-img-top">
                         <div class="card-body">
-                            <h5 class="card-title text-white">Membangun Desa Konoha</h5>
+                            <h5 class="card-title text-white">Membersihkan Tsumeaka</h5>
                             <p class="card-text text-white-opa">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Rerum ut adipisci cupiditate nobis quod est consequatur, accusantium architecto vero eaque libero facere nihil pariatur vel rem eum autem commodi porro.</p>
                             <a href="#" class="btn btn-outline white-btn mt-3" style="font-weight: 600 !important;">Lihat Proyek</a>
                         </div>
@@ -85,7 +85,7 @@
                 </div>
                 <div class="col-md-4" data-aos="fade-up" data-aos-delay="100">
                     <div class="card bg-card-purple">
-                        <img src="https://i.ytimg.com/vi/gU5MzgPsHPw/maxresdefault.jpg" alt="Project 2" class="card-img-top">
+                        <img src="https://images3.alphacoders.com/695/695428.jpg" alt="Project 2" class="card-img-top">
                         <div class="card-body">
                             <h5 class="card-title text-white">Nge Solo PDS 4</h5>
                             <p class="card-text text-white-opa">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corrupti dolorum, optio ad consequatur iure culpa aliquid, delectus repellat quis, adipisci eveniet doloremque quidem unde laboriosam? Dolores unde animi.</p>
@@ -94,12 +94,12 @@
                     </div>
                 </div>
                 <div class="col-md-4" data-aos="fade-up" data-aos-delay="100">
-                    <div class="card bg-card-white">
+                    <div class="card bg-card-red">
                         <img src="https://i.ytimg.com/vi/gU5MzgPsHPw/maxresdefault.jpg" alt="Project 3" class="card-img-top">
                         <div class="card-body">
-                            <h5 class="card-title">Nangkep Gurita</h5>
-                            <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi minus tenetur ipsa? Expedita cumque animi voluptatem, qui aut perspiciatis magni, perferendis recusandae quod ducimus consequuntur officiis! At rem .</p>
-                            <a href="#" class="btn btn-outline download-btn mt-3" style="font-weight: 600 !important;">Lihat Proyek</a>
+                            <h5 class="card-title text-white">Nangkep Gurita</h5>
+                            <p class="card-text text-white-opa">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi minus tenetur ipsa? Expedita cumque animi voluptatem, qui aut perspiciatis magni, perferendis recusandae quod ducimus consequuntur officiis! At rem .</p>
+                            <a href="#" class="btn btn-outline white-btn mt-3" style="font-weight: 600 !important;">Lihat Proyek</a>
                         </div>
                     </div>
                 </div>
