--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
             </div>
             <div class="row g-4 portofolio-items">
                 <div class="col-md-4" data-aos="fade-up" data-aos-delay="100">
-                    <div class="card bg-card-primary">
+                    <div class="card bg-card-purple">
                         <img src="https://c4.wallpaperflare.com/wallpaper/174/602/476/4k-boruto-black-wallpaper-preview.jpg" alt="Project 1" class="card-img-top">
                         <div class="card-body">
                             <h5 class="card-title text-white">Membersihkan Tsumeaka</h5>
@@ -84,7 +84,7 @@
                     </div>
                 </div>
                 <div class="col-md-4" data-aos="fade-up" data-aos-delay="100">
-                    <div class="card bg-card-purple">
+                    <div class="card bg-card-primary">
                         <img src="https://images3.alphacoders.com/695/695428.jpg" alt="Project 2" class="card-img-top">
                         <div class="card-body">
                             <h5 class="card-title text-white">Nge Solo PDS 4</h5>
@@ -94,8 +94,8 @@
                     </div>
                 </div>
                 <div class="col-md-4" data-aos="fade-up" data-aos-delay="100">
-                    <div class="card bg-card-red">
-                        <img src="https://i.ytimg.com/vi/gU5MzgPsHPw/maxresdefault.jpg" alt="Project 3" class="card-img-top">
+                    <div class="card bg-card-purple">
+                        <img src="https://i.pinimg.com/736x/9a/c6/53/9ac653e515192caf1872294ade751752.jpg" alt="Project 3" class="card-img-top">
                         <div class="card-body">
                             <h5 class="card-title text-white">Nangkep Gurita</h5>
                             <p class="card-text text-white-opa">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi minus tenetur ipsa? Expedita cumque animi voluptatem, qui aut perspiciatis magni, perferendis recusandae quod ducimus consequuntur officiis! At rem .</p>
