--- a/index.html
+++ b/index.html
@@ -72,37 +72,39 @@
             <div class="text-center">
                 <h2 class="title text-purple mb-5">Porto<span class="text-white">folio</span></h2>
             </div>
-            <div class="row g-4 portofolio-items">
-                <div class="col-md-4" data-aos="fade-up" data-aos-delay="100">
-                    <div class="card bg-card-purple">
-                        <img src="https://c4.wallpaperflare.com/wallpaper/174/602/476/4k-boruto-black-wallpaper-preview.jpg" alt="Project 1" class="card-img-top">
-                        <div class="card-body">
-                            <h5 class="card-title text-white">Membersihkan Tsumeaka</h5>
-                            <p class="card-text text-white-opa">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Rerum ut adipisci cupiditate nobis quod est consequatur, accusantium architecto vero eaque libero facere nihil pariatur vel rem eum autem commodi porro.</p>
-                            <a href="#" class="btn btn-outline white-btn mt-3" style="font-weight: 600 !important;">Lihat Proyek</a>
-                        </div>
-                    </div>
+            <div class="row g-4 align-items-stretch portofolio-items">
+            <div class="col-md-6 col-lg-4" data-aos="fade-in" data-aos-delay="100">
+                <div class="card h-100 bg-card-purple">
+                <img src="https://c4.wallpaperflare.com/wallpaper/174/602/476/4k-boruto-black-wallpaper-preview.jpg" alt="Project 1" class="card-img-top">
+                <div class="card-body d-flex flex-column">
+                    <h5 class="card-title text-white">Membersihkan Tsumeaka</h5>
+                    <p class="card-text text-white-opa">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Rerum ut adipisci cupiditate nobis quod est consequatur, accusantium architecto vero eaque libero facere nihil pariatur vel rem eum autem commodi porro.</p>
+                    <a href="#" class="btn btn-outline white-btn mt-auto" style="font-weight: 600 !important;">Lihat Proyek</a>
                 </div>
-                <div class="col-md-4" data-aos="fade-up" data-aos-delay="100">
-                    <div class="card bg-card-primary">
-                        <img src="https://images3.alphacoders.com/695/695428.jpg" alt="Project 2" class="card-img-top">
-                        <div class="card-body">
-                            <h5 class="card-title text-white">Nge Solo PDS 4</h5>
-                            <p class="card-text text-white-opa">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corrupti dolorum, optio ad consequatur iure culpa aliquid, delectus repellat quis, adipisci eveniet doloremque quidem unde laboriosam? Dolores unde animi.</p>
-                            <a href="#" class="btn btn-outline white-btn mt-3" style="font-weight: 600 !important;">Lihat Proyek</a>
-                        </div>
-                    </div>
                 </div>
-                <div class="col-md-4" data-aos="fade-up" data-aos-delay="100">
-                    <div class="card bg-card-purple">
-                        <img src="https://i.pinimg.com/736x/9a/c6/53/9ac653e515192caf1872294ade751752.jpg" alt="Project 3" class="card-img-top">
-                        <div class="card-body">
-                            <h5 class="card-title text-white">Nangkep Gurita</h5>
-                            <p class="card-text text-white-opa">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi minus tenetur ipsa? Expedita cumque animi voluptatem, qui aut perspiciatis magni, perferendis recusandae quod ducimus consequuntur officiis! At rem .</p>
-                            <a href="#" class="btn btn-outline white-btn mt-3" style="font-weight: 600 !important;">Lihat Proyek</a>
-                        </div>
-                    </div>
+            </div>
+
+            <div class="col-md-6 col-lg-4" data-aos="fade-in" data-aos-delay="100">
+                <div class="card h-100 bg-card-primary">
+                <img src="https://images3.alphacoders.com/695/695428.jpg" alt="Project 2" class="card-img-top">
+                <div class="card-body d-flex flex-column">
+                    <h5 class="card-title text-white">Nge Solo PDS 4</h5>
+                    <p class="card-text text-white-opa">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corrupti dolorum, optio ad consequatur iure culpa aliquid, delectus repellat quis, adipisci eveniet doloremque quidem unde laboriosam? Dolores unde animi.</p>
+                    <a href="#" class="btn btn-outline white-btn mt-auto" style="font-weight: 600 !important;">Lihat Proyek</a>
                 </div>
+                </div>
+            </div>
+
+            <div class="col-md-6 col-lg-4 mx-md-auto" data-aos="fade-in" data-aos-delay="100">
+                <div class="card h-100 bg-card-purple">
+                <img src="https://i.pinimg.com/736x/9a/c6/53/9ac653e515192caf1872294ade751752.jpg" alt="Project 3" class="card-img-top">
+                <div class="card-body d-flex flex-column">
+                    <h5 class="card-title text-white">Nangkep Gurita</h5>
+                    <p class="card-text text-white-opa">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi minus tenetur ipsa? Expedita cumque animi voluptatem, qui aut perspiciatis magni, perferendis recusandae quod ducimus consequuntur officiis! At rem.</p>
+                    <a href="#" class="btn btn-outline white-btn mt-auto" style="font-weight: 600 !important;">Lihat Proyek</a>
+                </div>
+                </div>
+            </div>
             </div>
         </div>
     </section>
@@ -112,7 +114,7 @@
                 <h2 class="title text-purple">Hob<span class="text-white">by</span></h2>
             </div>
             <div class="row g-4 text-center">
-                <div class="col-sm-6 col-md-4">
+                <div class="col-sm-6 col-md-4" >
                     <div class="card h-100 border-0 shadow-sm">
                         <div class="card-body">
                             <i class="bi bi-code fa-2x mb-3 text-purple"></i>
