--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
                 <div class="col-md-6">
                     <div class="card-experience">
                         <h5 class="fw-semibold">Freelance Programmer</h5>
-                        <p class="text-company fw-semibold">Self Employee</p>
+                        <p class="text-company fw-semibold">Self-employed</p>
                         <p class="text-muted mb-2">
                         <i class="bi bi-calendar-event me-2"></i> 2023 - Sekarang
                         </p>
