--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
             <div class="row align-items-center flex-column-reverse flex-md-row">
                 <div class="col-md-6" data-aos="flip-left" data-aos-delay="100">
                     <h1 class="hero-text mb-0">Ananda Cahya<span class="text-purple"> Ramadan</span></h1>
-                    <h2 class="text-sub fw-bold text-white" id="typed-text"></h2>
+                    <h2 class="text-sub fw-bold text-white mt-2 mb-3" id="typed-text"></h2>
                     <p class="text-white-opa">
                         Saya adalah seorang Full Stack Developer dengan semangat untuk terus belajar dan berkembang di dunia pengembangan web. Familiar dengan teknologi seperti Laravel, PHP, JavaScript, HTML, dan CSS, saya memiliki kemampuan untuk menangani pengembangan aplikasi web dari sisi front-end maupun back-end. 
                     </p>
