--- a/index.html
+++ b/index.html
@@ -106,6 +106,36 @@
                 </div>
                 </div>
             </div>
+            <div class="col-md-6 col-lg-4 mx-md-auto" data-aos="fade-in" data-aos-delay="100">
+                <div class="card h-100 bg-card-purple">
+                <img src="assets/portofolio.png" alt="Sirvey Status" class="card-img-top">
+                <div class="card-body d-flex flex-column">
+                    <h5 class="card-title text-white">Web Portofolio</h5>
+                    <p class="card-text text-white-opa">Website portofolio pribadi ini menampilkan kumpulan proyek dan karya digital yang saya buat. Desain responsif dan modern untuk memberikan pengalaman terbaik saat menjelajah karya saya.</p>
+                    <a href="#" class="btn btn-outline white-btn mt-auto" style="font-weight: 600 !important;">Lihat Proyek</a>
+                </div>
+                </div>
+            </div>
+            <div class="col-md-6 col-lg-4 mx-md-auto" data-aos="fade-in" data-aos-delay="100">
+                <div class="card h-100 bg-card-primary">
+                <img src="assets/digitalisasi.png" alt="digitalisasi" class="card-img-top">
+                <div class="card-body d-flex flex-column">
+                    <h5 class="card-title text-white">Digitalisasi Form Sertifikat Survey Kapal</h5>
+                    <p class="card-text text-white-opa">Sebelumnya draf sertifikat dibuat secara manual (offline) setelah survei. Kini, dengan digitalisasi, draf sertifikat dapat dibuat secara online melalui aplikasi web yang sudah tersedia.</p>
+                    <a href="#" class="btn btn-outline white-btn mt-auto" style="font-weight: 600 !important;">Lihat Proyek</a>
+                </div>
+                </div>
+            </div>
+            <div class="col-md-6 col-lg-4 mx-md-auto" data-aos="fade-in" data-aos-delay="100">
+                <div class="card h-100 bg-card-purple">
+                <img src="assets/survey status.png" alt="Sirvey Status" class="card-img-top">
+                <div class="card-body d-flex flex-column">
+                    <h5 class="card-title text-white">Reengineering Survey Status</h5>
+                    <p class="card-text text-white-opa">Modul yang dikerjakan yaitu memindahkan fitur particular ship survey status dari engine lama ke engine baru, sekaligus dengan redesain tampilan agar lebih menarik.</p>
+                    <a href="#" class="btn btn-outline white-btn mt-auto" style="font-weight: 600 !important;">Lihat Proyek</a>
+                </div>
+                </div>
+            </div>
             </div>
         </div>
     </section>
